--- a/et4.org
+++ b/et4.org
@@ -659,3 +659,4 @@ public static class Game {
   - 另外，【可以考虑， *过滤掉或是配置掉背便条自动同步过程中的确认窗口繁琐过程* 】如果每个 pdf 的自动生成与刷新，我不需要多次点 enter 确认窗口，我只需要点击一个，或者甚至一个也不需要点，就也算满足用户需求。
 - VSC 的配置可能哪里写得不对。以前没有这个问题。现VSC 跳转至 emacs 打开当前 buffer, 不能精确定位到 VSC 中当前 buffer 所在的行。改天有机会的时候再 debug 一下。
 ** StartConfigComponent: 现框架里有重构了的版本，在理解现ET7 框架的基础上进行必要适配：先把之前总结的再熟悉一下，下午有时间也看看这个
+- 这块儿涉及的内容比较多，不懂的也比较多。今天上午中午约一个半小时就看一块儿，希望把下午的修改理出一点儿头绪来，再不行还没思路，下午就得来学校学习了
